[project]
name = "youtube-thumbnail-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.6.2",
    "openai[aiohttp]>=2.15.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "yt-dlp>=2025.12.8"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]